# bc_python_11-15

./: .pre-commit-config.yaml  README.md  bandit.yml  hello.py  pyproject.toml
aula11/02-encapsulamento/: conexao.py  encaps.py
aula11/03-heranca/: etl.py
aula11/04-polimorfismo/: overload.py  override.py
aula12/: csv-test.py
aula12/src/: usar.py
aula12/src/interface/classes/: csv_class.py
aula13-14/: testetxt.py
aula13-14/data/csv_files/: 1.csv
aula13-14/data/json_files/: 2.json
aula13-14/data/txt_files/: 3.txt
aula13-14/src/: __main__.py
aula13-14/src/lib/classes/: AbstractDataSource.py  CsvSource.py  FilesSources.py  JsonSource.py  TxtSource.py
aula13-14/src/lib/classes/aws/: s3.py
aula15/Collector/: main.py
aula15/Collector/datasource/: api.py
aula15/Collector/tools/aws/: client.py
aula15/FakeApi/: start.py
