[project]
name = "bc-python-11-15"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.8.0",
    "boto3>=1.35.29",
    "commitizen>=3.29.1",
    "faker>=30.0.0",
    "fastapi>=0.115.0",
    "pandas>=2.2.3",
    "pre-commit>=3.8.0",
    "requests>=2.32.3",
    "schedule>=1.2.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
